# mipt_edu

./: .gitignore
1sem/labs/1.1.1/: prepare.ipynb
1sem/labs/1.1.1/data/: specifications.csv  t3_20_down.csv  t3_20_up.csv  t3_30_down.csv  t3_30_up.csv  t3_50_down.csv  t3_50_up.csv  t4.csv  wire_diameter.csv
1sem/labs/1.1.1/report/: report.tex
1sem/labs/1.1.4/: prepare.ipynb
1sem/labs/1.1.4/data/: data.txt
1sem/labs/1.1.4/report/: max.tex  report.tex
1sem/labs/1.2.1/: data.xlsx  prepare.ipynb
1sem/labs/1.2.1/data/: 1.txt  2.txt
1sem/labs/1.2.1/report/: report.tex
1sem/labs/1.2.3/: prepare.ipynb
1sem/labs/1.2.3/data/: 3.txt  data.xlsx
1sem/labs/1.2.3/report/: report.tex
1sem/labs/1.2.5/: prepare.ipynb
1sem/labs/1.2.5/data/: t1.csv  t2.csv
1sem/labs/1.2.5/report/: report.tex
1sem/labs/1.3.2/: prepare.ipynb
1sem/labs/1.3.2/data/: data.xlsx  geometry_metal.txt  geometry_wood1.txt  geometry_wood2.txt  metal.txt  metal_3.txt  metal_reversed.txt  wood1.txt  wood1_reversed.txt  wood2.txt  wood2_reversed.txt
1sem/labs/1.3.2/report/: report.tex
1sem/labs/1.4.1/: prepare.ipynb
1sem/labs/1.4.1/data/: data.txt  data_n.txt
1sem/labs/1.4.1/report/: report.tex
1sem/labs/1.4.5/: prepare.ipynb
1sem/labs/1.4.5/data/: F1.txt  F2.txt  F3.txt  F4.txt  F5.txt  data.xlsx  ms.txt
1sem/labs/1.4.5/report/: report.tex
1sem/labs/VPV/: report.tex
1sem/labs/VPV/images/: En_t_1.eps  En_t_2.eps  En_t_3.eps  L_t_1.eps  L_t_2.eps  L_t_3.eps  V_t_1.eps  V_t_2.eps  V_t_3.eps  e_t_1.eps  e_t_2.eps  e_t_3.eps  phi_t_1.eps  phi_t_2.eps  phi_t_3.eps  r_t_1.eps  r_t_2.eps  r_t_3.eps  y_x_1.eps  y_x_2.eps  y_x_3.eps
2sem/VPV/: vpv.tex
2sem/VPV/figures/: FN.eps  FN2.eps  FT.eps  kr.eps
2sem/VPV/simulation/: R11D0N300SV2  R5D0N300SV2  R5D1000N300MV100  R5D1000N300MV310  R5D1000N300MV40  R5D1000N300MV440  R7D0N300SV2  R9D0N300SV2  Untitled.ipynb  config.py  draw.py  main.py
2sem/cpp_labs/lab1/: CMakeLists.txt  main.cpp  main.py  requirements.txt
2sem/cpp_labs/lab1/data/: binary_search.csv  linear_search.csv  strategy_a_1.csv  strategy_a_2.csv  strategy_b_1.csv  strategy_b_2.csv  strategy_c_1.csv  strategy_c_2.csv  sum_search_1.csv  sum_search_2.csv
2sem/cpp_labs/lab2/: CMakeLists.txt  chekers.h  config.h  main.cpp  main.py  requirements.txt  sorts.cpp  sorts.h  time_checkers.cpp
2sem/cpp_labs/lab2/data/: comb.csv  shaker.csv  shell.csv
2sem/cpp_labs/lab3/: CMakeLists.txt  checkers.cpp  checkers.h  config.h  main.cpp  main.py  requirements.txt  solvers.cpp  solvers.h  structs.h  structs_methods.cpp  structs_methods.h
2sem/cpp_labs/lab3/data/: dynamic.csv  io_flav.csv
2sem/cpp_labs/lab4/: CMakeLists.txt  README.md  checkers.cpp  checkers.h  config.h  main.cpp  main.py  requirements.txt  structs.h  structs_methods.cpp  structs_methods.h
2sem/cpp_labs/lab4/data/: hashset.csv  tree_A.csv  tree_B.csv
2sem/cpp_labs/polska/: CMakeLists.txt  main.cpp  structures.h
2sem/hw/general_phys/: общефиз1.one  общефиз10.one  общефиз11.one  общефиз2.one  общефиз2.tex  общефиз3.one  общефиз4.one  общефиз5.one  общефиз6.one  общефиз9.one
2sem/hw/linal/: линал2.one
2sem/hw/matan/: matan1.tex  matan2.tex  matan3.tex
2sem/hw/matan/figures/: T11.pdf_tex  T12.pdf_tex  T13.pdf_tex  T1_1.pdf_tex  T1_2.pdf_tex  T1_3.pdf_tex  T2_graph.pdf_tex
2sem/labs/1.3.3/: data.xlsx  final.tex  test.tex
2sem/labs/1.3.3/images/: PQd1.eps  PQd2.eps  PQd3.eps  lnPlnQd1.eps  lnPlnQd2.eps  lnPlnQd3.eps  xP.eps  xP1.eps  xP2.eps  xP3.eps
2sem/labs/1.3.3/process/: Untitled.ipynb  config.json  data_normal.xlsx
2sem/labs/2.1.1/: data.xlsx  final.tex  test.tex
2sem/labs/2.1.1/images/: TN.eps  kQ.eps
2sem/labs/2.1.1/process/: Untitled.ipynb  config.json  data_normal.xlsx
2sem/labs/2.1.2/: data.xlsx  final.tex  test.tex
2sem/labs/2.1.2/images/: gammat.eps  ht.eps
2sem/labs/2.1.2/process/: Untitled.ipynb  config.json  data_normal.xlsx  eparser.py  gradient_errors.py
2sem/labs/2.1.6/: data.xlsx  final.tex  test.tex
2sem/labs/2.1.6/images/: PdT.eps  (+1 more)
2sem/labs/2.2.1/: final.tex  test.tex
2sem/labs/2.2.3/: final.tex  test.tex
2sem/labs/2.3.1/: final.tex  test.tex
2sem/labs/2.5.1/: data.xlsx  final.tex  test.tex
2sem/labs/lab1/: data.xlsx  test.tex
2sem/lectures/linal/: lecture1.one
2sem/lectures/matan/: lecture2.one
3sem/anmech/anmech1/: анмех.one  анмех1.2.one  анмех1.3.one  анмех1.one  анмехдоп.one
3sem/anmech/anmech2/: анмех2.11.one  анмех2.12.one  анмех2.8.one  анмех2.9.one
3sem/diff/diff1/: диффуры1.one
3sem/diff/diff2/: diff2.tex
3sem/horizons/: CMakeLists.txt  README.md  chars.txt  config.json  coords.xyz  data.txt  data_processor.ipynb  distribution.txt  distribution.txt,  energy.txt  main.cpp  v=0.xyz
3sem/labs/3.1.1/: config.json  data_normal.xlsx  final.tex  process.ipynb
3sem/labs/3.2.3/: final.tex  main.xlsm  process.ipynb  table1.xlsx  table2.xlsx  table3.xlsx  table4.xlsx  table5.xlsx
3sem/labs/3.2.4/: Untitled.ipynb  data1.xlsx  data2.xlsx  final.tex
3sem/labs/3.5.1/: final.tex  main.xlsx  process.ipynb  table1.xlsx  table2.xlsx  table3.xlsx  table4.xlsx
3sem/labs/3.7.1/: 1.xlsx  2.xlsx  3.xlsx  4.xlsx  5.xlsx  6.xlsx  kirill.xlsx  process.ipynb
3sem/matan/: матан1.one
3sem/matan/matan1/: матан1.one
3sem/matan/matan2/: matan2.tex
3sem/matan/mistake_work/: kr.tex
3sem/simulation/: config.json  main.cpp  out.csv  process.ipynb
3sem/simulation/l1/: CMakeLists.txt  README.md
3sem/simulation/l3/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task5.cpp
3sem/simulation/l4/: CMakeLists.txt  config.json  main.cpp  out_euler.csv  out_heun.csv
3sem/simulation/l7/: config.json  main.cpp  out.csv  process.ipynb
3sem/teorver/: теорвер3.one  теорвер4.one
3sem/teorver/teorver6/: main.tex
3sem/teorver/teorver7/: main.tex
3sem/сpp_labs/lab1/: CMakeLists.txt  README.md  default.cpp  task1.cpp  task2.cpp  task3.cpp
3sem/сpp_labs/lab2/: CMakeLists.txt  README.md  default.cpp  main.cpp  main2.cpp  test.cpp
tools/excel_errors/: functions.py  main.py  main.xlsm
tools/grads/: config.json
(+87 files in other folders)
